--- a/styles/style.css
+++ b/styles/style.css
@@ -10,52 +10,93 @@
   background-attachment: fixed;
 }
 
+.page.theme_dark {
+  /* сохраните этот селектор в приведённом виде.
+    Так стили написанные ниже будут иметь больший вес,
+    чем стили в медиазапросе предпочтений пользователя
+  */
+  --main-color: #000028;
+  background-image: url(../images/cover-image-dark.png);
+  background-color: var(--main-color);
+}
+
+.page.theme_light {
+  /* сохраните этот селектор в приведённом виде.
+    Так стили написанные ниже будут иметь больший вес,
+    чем стили в медиазапросе предпочтений пользователя
+  */
+  --background-color: #fff1f7;
+  background-image: url(../images/cover-image-light.png);
+  background-color: var(--background-color);
+}
+
 .header {
   position: relative;
   font-family: var(--font-family);
   font-size: var(--font-size-main-text);
   padding: 10px;
   display: grid;
-  grid-template-rows: 34.4vh 37vh 18.8vh;
-  min-height: 100vh;
+  grid-template-rows: 34.4vh 36.95vh 17vh;
+  height: 100vh;
+  min-height: 668px;
 }
 
 .decorated-zone::after {
-  content: '';
+  content: "";
   position: absolute;
   inset-inline-end: 10px;
   inset-block-start: 10px;
   width: 25px;
   height: 25px;
   border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);;
+  border-inline-end: 1px solid var(--accent-color);
+}
+
+.page.theme_light .decorated-zone::after {
+  border-block-start: 1px solid var(--main-color);
+  border-inline-end: 1px solid var(--main-color);
+}
+
+.page.theme_dark .decorated-zone::after {
+  border-block-start: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--accent-color);
 }
 
 .decorated-zone::before {
-  content: '';
+  content: "";
   position: absolute;
   inset-block-end: 10px;
   inset-inline-start: 10px;
   width: 25px;
   height: 25px;
   border-block-end: 1px solid var(--accent-color);
-  border-inline-start: 1px solid var(--accent-color);;
+  border-inline-start: 1px solid var(--accent-color);
+}
+
+.page.theme_dark .decorated-zone::before {
+  border-block-end: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--accent-color);
+}
+
+.page.theme_light .decorated-zone::before {
+  border-block-end: 1px solid var(--main-color);
+  border-inline-start: 1px solid var(--main-color);
 }
 
 .header__decoration {
   position: absolute;
   inset-inline-end: 10px;
-  inset-block-start: 10px;
+  inset-block-start: 12px;
   text-transform: uppercase;
   padding-inline-end: 28px;
   color: var(--accent-color);
 }
 
 .header__decoration::after {
-  content: '';
+  content: "";
   position: absolute;
   inset-inline-end: 10px;
-  inset-block-start: 8px;
+  inset-block-start: 7px;
   width: 9px;
   height: 9px;
   background-color: var(--accent-color);
@@ -68,53 +109,104 @@
   align-self: center;
 }
 
-.header__theme-menu-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-block-end: 5px;
-  gap: 10px;
+.page.theme_dark .header__theme-menu-list {
   color: var(--accent-color);
+}
+
+.page.theme_light .header__theme-menu-list {
+  color: var(--main-color);
 }
 
 .header__theme-menu-item {
   font-size: var(--font-size-main-text);
-  padding-block-start: 2px;
+  position: relative;
+}
+
+.header__theme-menu-item:first-child {
+  inset-inline-start: -70px;
+  inset-block-start: -50px;
+}
+
+.header__theme-menu-item:nth-child(2) {
+  inset-inline-start: -70px;
+  inset-block-start: -15px;
+}
+
+.header__theme-menu-item:last-child {
+  inset-inline-start: -70px;
+  inset-block-start: 20px;
 }
 
 .header__theme-menu-button {
   border: none;
   background: transparent;
   text-transform: lowercase;
+  cursor: pointer;
+  position: absolute;
+  width: 70px;
+  height: 25px;
+  inset: 0;
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color);
+  outline: 1px solid var(--accent-color);
   pointer-events: none;
-  outline-offset: -1px;
-  padding-inline: 13px;
-  padding-block: 0;
 }
 
 .header__theme-menu-button:hover {
   --accent-color: rgba(255, 0, 112, 0.4);
-  border: 1px solid var(--accent-color);
-  outline-offset: -1px;
-  padding-inline: 13px;
-  padding-block: 0;
+  outline: 1px solid var(--accent-color);
 }
 
 .header__theme-menu-button:focus-visible {
   outline: none;
   border-bottom: 1px solid var(--accent-color);
-  padding-inline: 13px;
-  padding-block: 0;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.page.theme_dark .header__theme-menu-button:hover {
+  --accent-color: rgba(255, 0, 112, 0.4);
+}
+
+.page.theme_dark .header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.page.theme_light .header__theme-menu-button_active {
+  outline: 1px solid var(--main-color);
+}
+
+.page.theme_light .header__theme-menu-button:hover {
+  --main-color: rgba(53, 52, 48, 0.4);
+  outline: 1px solid var(--main-color);
+}
+
+.page.theme_light .header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--main-color);
 }
 
 .header__title {
   font-size: var(--font-size-title);
   line-height: 95.7px;
-  color: var( --title-color);
+  color: var(--title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.page.theme_dark .header__title {
+  --title-color: #db00ff;
+  --accent-color: #ff0070;
+  color: var(--title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.page.theme_light .header__title {
+  --title-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  color: var(--title-color);
   text-shadow: 4px 4px 0 var(--accent-color);
 }
 
@@ -122,6 +214,20 @@
   background-color: var(--accent-color);
   color: var(--main-color);
   font-weight: bold;
+}
+
+.page.theme_dark .title-decor {
+  --accent-color: #ff0070;
+  --main-color: #000028;
+  background-color: var(--accent-color);
+  color: var(--main-color);
+}
+
+.page.theme_light .title-decor {
+  --accent-color: #ff8dcb;
+  --main-color: #353430;
+  background-color: var(--accent-color);
+  color: var(--main-color);
 }
 
 .content {
@@ -141,6 +247,15 @@
   font-family: var(--font-family);
 }
 
+.page.theme_dark .content__title {
+  color: var(--accent-color);
+}
+
+.page.theme_light .content__title {
+  --main-color: #353430;
+  color: var(--main-color);
+}
+
 .content__list {
   display: grid;
   gap: 20px;
@@ -153,24 +268,14 @@
 
 .content__list-title {
   line-height: 23.4px;
-  letter-spacing: -1.9px;
-  margin-block-end: 10px;
   font-family: var(--font-family);
+  font-size: var(--font-size-main-text);
   padding-block-start: 0.5px;
+  margin-block-end: 10px;
 }
 
-.content__list-uniq-order .content__list-title {
-  margin-block-end: 20px;
-}
-
-.content__list-title-letter-space {
-  letter-spacing: -0.5px;
-  margin: 0;
-}
-
-.content__list-text {
-  color: var(--main-text-color);
-  line-height: 23.4px;
+.content__title ~ .content__list-title {
+  margin-block-end: 0;
 }
 
 .content__list-subtitle {
@@ -179,7 +284,30 @@
   margin-block-end: 10px;
 }
 
+.content__list-uniq-order .content__list-title {
+  margin-block-end: 20px;
+}
+
+.content__images .content__list-title {
+  margin: 0;
+}
+
+.content__list-text {
+  color: var(--main-text-color);
+  line-height: 23.4px;
+}
+
+.page.theme_dark .content__list-text {
+  color: var(--main-text-color);
+}
+
+.page.theme_light .content__list-text {
+  --main-color: #353430;
+  color: var(--main-color);
+}
+
 .content__list-link {
+  text-decoration: none;
   text-shadow: 2px 2px 0 var(--accent-color);
 }
 
@@ -188,8 +316,32 @@
 }
 
 .content__list-link:focus-visible {
-  outline: none;
-  border: 1px solid var(--main-text-color);
+  outline: 1px solid var(--main-text-color);
+}
+
+.page.theme_dark .content__list-link {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.page.theme_dark .content__list-link:hover {
+  border-bottom: 1px solid var(--main-text-color);
+}
+
+.page.theme_dark .content__list-link:focus-visible {
+  outline: 1px solid var(--main-text-color);
+}
+
+.page.theme_light .content__list-link {
+  --accent-color: #ff8dcb;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.page.theme_light .content__list-link:hover {
+  border-bottom: 1px solid var(--main-color);
+}
+
+.page.theme_light .content__list-link:focus-visible {
+  outline: 1px solid var(--main-color);
 }
 
 .content__images {
@@ -218,19 +370,33 @@
   justify-content: center;
   align-items: center;
   padding: 15px 10px 10px;
-  min-height: 100vh;
+  min-height: 668px;
+  height: 100vh;
 }
 
 .footer__title {
   font-size: var(--font-size-title);
   font-family: var(--font-family);
   line-height: 95.7px;
-  color: var( --title-color);
+  color: var(--title-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.page.theme_dark .footer__title {
+  --title-color: #db00ff;
+  --accent-color: #ff0070;
+  color: var(--title-color);
   text-shadow: 2px 4.5px 0 var(--accent-color);
 }
 
-@media (width >= 768px) and (height >= 1024px) {
+.page.theme_light .footer__title {
+  --title-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  color: var(--title-color);
+  text-shadow: 2px 4.5px 0 var(--accent-color);
+}
 
+@media (width >= 768px) {
   .header {
     padding: 20px 20px 20px 0;
     grid-template-rows: 35.4vh 33.3vh 25.8vh;
@@ -245,7 +411,7 @@
     padding-block-end: 8vb;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
- 
+
   .header__subtitle {
     padding-inline-start: 50vi;
   }
@@ -254,12 +420,12 @@
     inset-inline-end: 20px;
     inset-block-start: 20px;
   }
-  
+
   .decorated-zone::after {
     inset-inline-end: 20px;
     inset-block-start: 20px;
   }
-  
+
   .decorated-zone::before {
     inset-block-end: 20px;
     inset-inline-start: 20px;
@@ -269,8 +435,16 @@
     padding: 60px 20px 0;
   }
 
+  .content__list-uniq-order {
+    align-self: flex-start;
+  }
+
   .content__article-column-order {
     grid-template-columns: 23vb 1fr;
+  }
+
+  .content__article-column-order:has(.content__list-uniq-order) {
+    grid-template-rows: 2.3vh;
   }
 
   .content__article-column-order .content__title {
@@ -281,20 +455,15 @@
     grid-column: 2 / 3;
   }
 
-  .content__article-column-order .content__list-title {
-    max-block-size: 25px;
-  }
-
   .content__article-uniq-order {
     grid-template-rows: 1fr 19vb 19vb 18vb;
   }
 
   .content__article-uniq-order .content__title {
-    display: grid;
-    grid-template-columns: 23vb;
     padding-block-start: 3vb;
-  } 
-  
+    padding-inline-end: 75%;
+  }
+
   .content__images {
     margin-block-start: 3vb;
     gap: 20px;
@@ -310,22 +479,22 @@
     height: 100%;
   }
 
-  .content__image--1 {
+  .content__gallery-item:first-child {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
   }
 
-  .content__image--2 {
+  .content__gallery-item:nth-child(2) {
     grid-column: 3 / 4;
     grid-row: 1 / 3;
   }
 
-  .content__image--3 {
+  .content__gallery-item:nth-child(3) {
     grid-column: 1 / 2;
     grid-row: 2 / 4;
   }
 
-  .content__image--5 {
+  .content__gallery-item:last-child {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
   }
@@ -334,13 +503,10 @@
     margin-block-start: 2vb;
     min-height: 100vh;
   }
-
 }
 
-@media (width >= 1024px) and (height >= 768px) {
-
+@media (width >= 1024px) {
   .header {
-    padding: 20px 20px 20px 0;
     grid-template-rows: 32.2vh 38.6vh 29.2vh;
   }
 
@@ -354,99 +520,49 @@
     inset-inline-end: -3vi;
   }
 
-  .header__theme-menu-item {
-    position: relative;
-    width: 51.5px;
-    height: 25px;
-  }
-
-  .header__theme-menu-button {
-    position: absolute;
-  }
-
   .header__theme-menu-item:first-child {
-    inset-block-start: -2px;
-    inset-inline-start: -9px;
+    inset-block-start: -63px;
+    inset-inline-start: -105px;
   }
 
   .header__theme-menu-item:nth-child(2) {
-    inset-block-start: -2px;
-    inset-inline-start: 10px;
+    inset-block-start: -63px;
+    inset-inline-start: -25px;
   }
 
   .header__theme-menu-item:last-child {
-    inset-block-start: -2px;
-    inset-inline-start: 28px;
-  }
-
-  .header__theme-menu-button_active {
-    inset-inline-end: -10px;
-    inset-block-start: 2px;
-  }
-  
-  .header__theme-menu-button:hover {
-    inset-inline-end: -10px;
-    inset-block-start: 2px;
-  }
-  
-  .header__theme-menu-button:focus-visible {
-    inset-inline-end: -10px;
-    inset-block-start: 2px;
-  }
-
-  .header__title {
-    align-self: center;
-    padding-block-end: 8vb;
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
- 
-  .header__subtitle {
-    padding-inline-start: 50vi;
-  }
-
-  .header__decoration {
-    inset-inline-end: 20px;
-    inset-block-start: 20px;
-  }
-  
-  .decorated-zone::after {
-    inset-inline-end: 20px;
-    inset-block-start: 20px;
-  }
-  
-  .decorated-zone::before {
-    inset-block-end: 20px;
-    inset-inline-start: 20px;
+    inset-block-start: -63px;
+    inset-inline-start: 55px;
   }
 
   .content {
-    padding: 20px 20px 0;
+    padding: 60px 20px 0;
+  }
+
+  .content__title {
+    display: inline;
+  }
+
+  .content__list-title {
+    padding-block-start: 0;
+  }
+
+  .content__article-column-order:has(.content__list-uniq-order) {
+    grid-template-rows: 2.8vh;
   }
 
   .content__article-column-order {
     grid-template-columns: 41vb 1fr;
   }
 
-  .content__article-column-order .content__title {
-    grid-column: 1 /2;
-  }
-
-  .content__article-column-order .content__list {
-    grid-column: 2 / 3;
-  }
-
-  .content__article-column-order .content__list-title {
-    max-block-size: 25px;
-  }
-
   .content__article-uniq-order {
     grid-template-rows: 10vb 1fr;
     margin-block-end: 4vb;
   }
-  
+
   .content__article-uniq-order .content__title {
-    width: 41vb;
-    align-self: end;
+    padding-block-start: 4vb;
+    padding-inline-end: 70%;
   }
 
   .content__article-uniq-order .content__list {
@@ -455,55 +571,187 @@
 
   .content__images {
     margin-block-start: 3.6vb;
-    gap: 20px;
   }
 
   .content__gallery {
-    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
-    gap: 20px;
   }
 
-  .content__image {
-    height: 100%;
-  }
-
-  .content__image--1 {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-  }
-
-  .content__image--2 {
-    grid-column: 3 / 4;
-    grid-row: 1 / 3;
-  }
-
-  .content__image--3 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 4;
-  }
-
-  .content__image--5 {
-    grid-column: 2 / 4;
-    grid-row: 3 / 4;
-  }
-
-  .content__image--5 .content__image {
+  .content__gallery-item:last-child .content__image {
     height: 98%;
     margin-block-start: 5px;
   }
 
-  .content__image--3 .content__image {
+  .content__gallery-item:nth-child(3) .content__image {
     height: 99.4%;
     margin-block-start: 1px;
-  }
-
-  .footer {
-    margin-block-start: 2vb;
   }
 
   .footer__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
+}
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --accent-color: #ff0070;
+    --main-color: #000028;
+    --title-color: #db00ff;
+    --main-text-color: #f1b2ce;
+  }
+  .page {
+    background-image: url(../images/cover-image-dark.png);
+    background-color: var(--main-color);
+  }
+
+  .header__decoration {
+    color: var(--accent-color);
+  }
+
+  .decorated-zone::after {
+    border-block-start: 1px solid var(--accent-color);
+    border-inline-end: 1px solid var(--accent-color);
+  }
+
+  .decorated-zone::before {
+    border-block-end: 1px solid var(--accent-color);
+    border-inline-start: 1px solid var(--accent-color);
+  }
+
+  .header__theme-menu-list {
+    color: var(--accent-color);
+  }
+
+  .header__theme-menu-button:hover {
+    --accent-color: rgba(255, 0, 112, 0.4);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-bottom: 1px solid var(--accent-color);
+  }
+
+  .header__title {
+    color: var(--title-color);
+    text-shadow: 4px 4px 0 var(--accent-color);
+  }
+
+  .title-decor {
+    background-color: var(--accent-color);
+    color: var(--main-color);
+  }
+
+  .content__title {
+    color: var(--accent-color);
+  }
+
+  .content__list-text {
+    color: var(--main-text-color);
+  }
+
+  .content__list-link {
+    text-shadow: 2px 2px 0 var(--accent-color);
+  }
+
+  .content__list-link:hover {
+    border-bottom: 1px solid var(--main-text-color);
+  }
+
+  .content__list-link:focus-visible {
+    outline: 1px solid var(--main-text-color);
+  }
+
+  .footer__title {
+    color: var(--title-color);
+    text-shadow: 2px 4.5px 0 var(--accent-color);
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root.theme-light {
+    --accent-color: #ff8dcb;
+    --shadow-color: #ff0070;
+    --title-color: #ffc2e6;
+    --main-color: #353430;
+    --background-color: #fff1f7;
+  }
+
+  .page {
+    background-image: url(../images/cover-image-light.png);
+    background-color: var(--background-color);
+  }
+
+  .header__decoration {
+    display: none;
+  }
+
+  .decorated-zone::after {
+    border-block-start: 1px solid var(--main-color);
+    border-inline-end: 1px solid var(--main-color);
+  }
+
+  .decorated-zone::before {
+    border-block-end: 1px solid var(--main-color);
+    border-inline-start: 1px solid var(--main-color);
+  }
+
+  .header__theme-menu-list {
+    color: var(--main-color);
+  }
+
+  .header__theme-menu-button_active {
+    border: 1px solid var(--main-color);
+  }
+
+  .header__theme-menu-button:hover {
+    --main-color: rgba(53, 52, 48, 0.4);
+    border: 1px solid var(--main-color);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-bottom: 1px solid var(--main-color);
+  }
+
+  .header__title {
+    --title-color: #ffc2e6;
+    --accent-color: #ff8dcb;
+    color: var(--title-color);
+    text-shadow: 4px 4px 0 var(--accent-color);
+  }
+
+  .title-decor {
+    --accent-color: #ff8dcb;
+    --main-color: #353430;
+    background-color: var(--accent-color);
+    color: var(--main-color);
+  }
+
+  .content__title {
+    --main-color: #353430;
+    color: var(--main-color);
+  }
+
+  .content__list-text {
+    --main-color: #353430;
+    color: var(--main-color);
+  }
+
+  .content__list-link {
+    --accent-color: #ff8dcb;
+    text-shadow: 2px 2px 0 var(--accent-color);
+  }
+
+  .content__list-link:hover {
+    border-bottom: 1px solid var(--main-color);
+  }
+
+  .content__list-link:focus-visible {
+    outline: 1px solid var(--main-color);
+  }
+
+  .footer__title {
+    --title-color: #ffc2e6;
+    --accent-color: #ff8dcb;
+    color: var(--title-color);
+    text-shadow: 2px 4.5px 0 var(--accent-color);
+  }
 }
