--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,13 +1,16 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
 :root {
-  --accent-color: #FF0070;
-  --main-color: #000028;
-  --title-color: #DB00FF;
+  --decorate-color: #FF0070;
+  --button-color: #FF0070;
+  --button-hover-color: rgba(255, 0, 112, 0.4);
+  --title-main-color: #DB00FF;
+  --title-shadow-color: #FF0070;
+  --accent-background-color: #FF0070;
+  --accent-text-color: #000028;
   --main-text-color: #F1B2CE;
+  --link-shadow-color: #FF0070;
   --font-family: 'IBM Plex Mono', sans-serif;
   --font-size-title: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --font-size-main-text: 18px;
+  --background-image: url(../images/cover-image-dark.png);
+  --background-color: #000028;
 }
