Add changes after 3nd review

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,20 +7,71 @@
   background-image: var(--background-image);
   background-color: var(--background-color);
   height: 100vh;
+  width: 100%;
   min-height: 668px;
   overflow-x: hidden;
-  width: fit-content;
 }
 
 .header {
-  position: relative;
   font-family: var(--font-family);
   font-size: var(--font-size-main-text);
   padding: 10px;
   display: grid;
   grid-template-rows: 34.4vh 36.95vh 17vh;
+  grid-template-columns: 1fr;
   height: 100vh;
   min-height: 668px;
+}
+
+.header__theme-menu {
+  align-self: center;
+  justify-self: flex-end;
+}
+
+.header__theme-menu-list {
+  display: grid;
+  gap: 11px;
+  padding-block-end: 1px;
+}
+
+.header__theme-menu-item {
+  display: block;
+  font-size: var(--font-size-main-text);
+  color: var(--button-color);
+}
+
+.header__theme-menu-button {
+  border: none;
+  background: transparent;
+  text-transform: lowercase;
+  cursor: pointer;
+  width: 70px;
+  height: 25px;
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--button-color);
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--button-hover-color);
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--button-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__title {
+  font-size: var(--font-size-title);
+  line-height: 95.7px;
+  color: var(--title-main-color);
+  text-shadow: 4px 4px 0 var(--title-shadow-color);
 }
 
 .decorated-zone::after {
@@ -64,61 +115,6 @@
   background-color: var(--decorate-color);
   border-radius: 50%;
   box-shadow: 0px 0px 4px 2px var(--decorate-color);
-}
-
-.header__theme-menu {
-  justify-self: flex-end;
-  align-self: center;
-}
-
-.header__theme-menu-list {
-  display: flex;
-  flex-direction: column;
-  gap: 36px;
-  width: 70px;
-  min-height: 99px;
-}
-
-.header__theme-menu-item {
-  font-size: var(--font-size-main-text);
-  position: relative;
-  color: var(--button-color);
-}
-
-.header__theme-menu-button {
-  border: none;
-  background: transparent;
-  text-transform: lowercase;
-  cursor: pointer;
-  position: absolute;
-  width: 70px;
-  height: 25px;
-  inset: 0;
-}
-
-.header__theme-menu-button_active {
-  outline: 1px solid var(--button-color);
-  pointer-events: none;
-}
-
-.header__theme-menu-button:hover {
-  outline: 1px solid var(--button-hover-color);
-}
-
-.header__theme-menu-button:focus-visible {
-  outline: none;
-  border-bottom: 1px solid var(--button-color);
-}
-
-.header__theme-menu-button:focus {
-  outline: none;
-}
-
-.header__title {
-  font-size: var(--font-size-title);
-  line-height: 95.7px;
-  color: var(--title-main-color);
-  text-shadow: 4px 4px 0 var(--title-shadow-color);
 }
 
 .title-decor {
@@ -207,15 +203,15 @@
 .content__image {
   display: block;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .content__gallery {
   display: grid;
   gap: 10px;
-  grid-auto-flow: dense;
-  grid-template-columns: repeat(auto-fit, minmax(min(375px, 100%), 1fr));
+  grid-auto-flow: row dense;
 }
 
 .footer {
@@ -254,7 +250,8 @@
   }
 
   .header__subtitle {
-    width: 364px;
+    max-width: 364px;
+    width: 100%;
     justify-self: flex-end;
     align-self: flex-start;
     padding-block-start: 1.5px;
@@ -279,8 +276,12 @@
     padding: 60px 20px 0;
   }
 
+  .content__list-uniq-order {
+    padding-inline-start: 2px;
+  }
+
   .content__article-column-order {
-    grid-template-columns: 23vb 46vb;
+    grid-template-columns: 32.1% 65%;
   }
 
   .content__article-column-order .content__title {
@@ -292,7 +293,8 @@
   }
 
   .content__article-uniq-order .content__title {
-    width: 236px;
+    max-width: 236px;
+    width: 100%;
     padding-block-start: 29px;
   }
 
@@ -307,12 +309,7 @@
 
   .content__gallery {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 18.5vh 22.5vh 1fr;
     gap: 20px;
-  }
-
-  .content__image {
-    height: 100%;
   }
 
   .content__gallery-item:first-child {
@@ -337,7 +334,6 @@
 
   .footer {
     margin-block-start: 2vb;
-    min-height: 100vh;
   }
 }
 
@@ -349,20 +345,19 @@
   .header__theme-menu {
     justify-self: center;
     align-self: self-start;
+    padding-block-end: 0;
   }
 
   .header__theme-menu-list {
-    flex-direction: row;
-    display: flex;
-    justify-content: space-between;
-    min-width: 230px;
-    min-height: 26px;
-    padding-inline-end: 60px;
-    padding-inline-start: 9px;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    padding-inline-start: 18px;
   }
 
   .header__subtitle {
-    min-width: 491px;
+    max-width: 490px;
     padding: 0;
   }
 
@@ -378,16 +373,24 @@
     padding-block-start: 0;
   }
 
+  .content__list-uniq-order {
+    padding-inline-start: 0;
+  }
+
+  .content__article-column-order:has(.content__list-uniq-order) {
+    padding-block-start: 32px;
+  }
+
   .content__article-column-order {
-    grid-template-columns: 41vb 1fr;
+    grid-template-columns: 32.1% 65.9%;
   }
 
   .content__article-uniq-order {
-    grid-template-rows: 10vb 1fr;
+    grid-template-rows: max-content 1fr;
   }
 
   .content__article-uniq-order .content__title {
-    width: 315px;
+    max-width: 315px;
   }
 
   .content__article-uniq-order .content__list {
@@ -399,18 +402,8 @@
     grid-template-rows: repeat(2, minmax(20px, max-content));
   }
 
-  .content__gallery {
-    grid-template-rows: auto;
-  }
-
-  .content__gallery-item:last-child .content__image {
-    height: 98%;
-    margin-block-start: 5px;
-  }
-
-  .content__gallery-item:nth-child(3) .content__image {
-    height: 99.4%;
-    margin-block-start: 1px;
+  .content__images {
+    margin-block-end: 46px;
   }
 
   .footer__title {
