Add changes in style css - grid-template-rows

--- a/styles/style.css
+++ b/styles/style.css
@@ -210,7 +210,8 @@
 .content__gallery {
   display: grid;
   gap: 10px;
-  grid-auto-flow: row dense;
+  grid-template-rows: auto;
+  grid-auto-flow: dense;
 }
 
 .footer {
