add auto grid-templates-rows

--- a/styles/style.css
+++ b/styles/style.css
@@ -212,6 +212,7 @@
   gap: 10px;
   grid-auto-flow: dense;
   grid-template-columns: repeat(auto-fit, minmax(min(375px, 100%), 1fr));
+  grid-template-rows: auto;
 }
 
 .footer {
